Fix vertical alignment in edit mode for labels

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewQualificationsSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewQualificationsSuccess.css
@@ -54,8 +54,9 @@ span#static_lang_type,
 span#static_license_code {
     display: block;
     float: left;
-    margin-top: 10px;
-    padding: 1px 4px;
+    margin-top: 5px;
+    padding: 0px 4px;
+    max-width: 310px;
 }
 
 div#changeWorkExperience,
